--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -103,18 +103,10 @@ table td.filename form { font-size:.85em; margin-left:3em; margin-right:3em; }
 #uploadsize-message,#delete-confirm { display:none; }
 
 /* File actions */
-.fileactions {
-	top:.6em; right:0;
-	font-size:.8em;
-}
+
+a.name .share-icon { position:absolute; right:3em; top: 0.4em; }
 #fileList .name { position:relative; /* Firefox needs to explicitly have this default set … */ }
-#fileList tr:hover .fileactions { /* background to distinguish when overlaying with file names */
-	background:rgba(248,248,248,.9); box-shadow:-5px 0 7px rgba(248,248,248,.9);
-}
-#fileList tr.selected:hover .fileactions, #fileList tr.mouseOver .fileactions { /* slightly darker color for selected rows */
-	background:rgba(238,238,238,.9); box-shadow:-5px 0 7px rgba(238,238,238,.9);
-}
-#fileList .fileactions a.action img { position:relative; top:.2em; }
+#fileList a.action img { position:relative; }
 #fileList a.action { display:inline; margin:-.5em 0; padding:1em .5em 1em .5em !important; }
 #fileList img.move2trash { display:inline; margin:-.5em 0; padding:1em .5em 1em .5em !important; float:right; }
 a.action.delete { float:right; }
@@ -122,13 +114,8 @@ a.action>img { max-height:16px; max-width:16px; vertical-align:text-bottom; }
 .selectedActions { display:none; float:right; }
 .selectedActions a { display:inline; margin:-.5em 0; padding:.5em !important; }
 .selectedActions a img { position:relative; top:.3em; }
-
-#fileList a.action {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-	opacity: 0;
-	display:none;
-}
+#fileList a.action { -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); opacity: 0; display:none; }
+#fileList .share-icon a.action { opacity:0.5; display:inline; }
 #fileList tr:hover a.action, #fileList a.action.permanent {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=.5)";
 	filter: alpha(opacity=.5);
