--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -111,7 +111,7 @@ a.name .share-icon a span, a.action span { font-size:10px;}
 #fileList a.action { display:inline; margin:-.5em 0; padding:1em .5em 1em .5em !important; }
 #fileList img.move2trash { display:inline; margin:-.5em 0; padding:1em .5em 1em .5em !important; float:right; }
 a.action.delete { float:right; }
-a.action>img, #fileList .filesize img, #fileList .date .modified img { max-height:16px; max-width:16px; vertical-align:text-bottom; }
+a.action>img, #fileList .filesize img, #fileList .date .modified img { max-height:16px; max-width:16px; vertical-align:text-bottom; cursor:pointer; }
 .selectedActions { display:none; float:right; }
 .selectedActions a { display:inline; margin:-.5em 0; padding:.5em !important; }
 .selectedActions a img { position:relative; top:.3em; }
