Selects files on clicking instead of downloading them.
Need further code adjustments.

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -85,6 +85,8 @@ table td.filename a, table td.login, table td.logout, table td.download, table t
 table td.filename .nametext, .uploadtext, .modified { float:left; padding:.3em 0; }
 /* TODO fix usability bug (accidental file/folder selection) */
 table td.filename .nametext { overflow:hidden; text-overflow:ellipsis; }
+a.name span.nametext { margin-left:0; }
+span.nametext { margin-left:15px; font-weight:normal; }
 table td.filename .uploadtext { font-weight:normal; margin-left:.5em; }
 table td.filename form { font-size:.85em; margin-left:3em; margin-right:3em; }
 
