--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -19,17 +19,27 @@ body { background:#fefefe; font:normal .8em/1.6em "Helvetica Neue",Helvetica,Ari
 #body-user #header, #body-settings #header {
 	position:fixed; top:0; left:0; right:0; z-index:100; height:45px; line-height:2.5em;
 	background:#1d2d44 url('../img/noise.png') repeat;
-	-moz-box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222; -webkit-box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222; box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222; }
-#body-login #header { margin: -2em auto 0; text-align:center; height:10em; padding:1em 0 .5em;
- -moz-box-shadow:0 0 1em rgba(0, 0, 0, .5); -webkit-box-shadow:0 0 1em rgba(0, 0, 0, .5); box-shadow:0 0 1em rgba(0, 0, 0, .5);
-background:#1d2d44; /* Old browsers */
-background:-moz-linear-gradient(top, #35537a 0%, #1d2d44 100%); /* FF3.6+ */
-background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#35537a), color-stop(100%,#1d2d44)); /* Chrome,Safari4+ */
-background:-webkit-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* Chrome10+,Safari5.1+ */
-background:-o-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* Opera11.10+ */
-background:-ms-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* IE10+ */
-background:linear-gradient(top, #35537a 0%,#1d2d44 100%); /* W3C */
-filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#35537a', endColorstr='#1d2d44',GradientType=0 ); /* IE6-9 */ }
+	-moz-box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	box-shadow:0 0 10px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+}
+
+#body-login #header {
+	margin: -2em auto 0;
+	text-align:center;
+	height:10em;
+	padding:1em 0 .5em;
+	-moz-box-shadow:0 0 1em rgba(0, 0, 0, .5);
+	-webkit-box-shadow:0 0 1em rgba(0, 0, 0, .5); box-shadow:0 0 1em rgba(0, 0, 0, .5);
+	background:#1d2d44; /* Old browsers */
+	background:-moz-linear-gradient(top, #35537a 0%, #1d2d44 100%); /* FF3.6+ */
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#35537a), color-stop(100%,#1d2d44)); /* Chrome,Safari4+ */
+	background:-webkit-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* Chrome10+,Safari5.1+ */
+	background:-o-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* Opera11.10+ */
+	background:-ms-linear-gradient(top, #35537a 0%,#1d2d44 100%); /* IE10+ */
+	background:linear-gradient(top, #35537a 0%,#1d2d44 100%); /* W3C */
+	filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#35537a', endColorstr='#1d2d44',GradientType=0 ); /* IE6-9 */
+}
 
 #owncloud { position:absolute; top:0; left:0; padding:6px; padding-bottom:0; }
 .header-right { float:right; vertical-align:middle; padding:0.5em; }
@@ -113,17 +123,17 @@ a.disabled, a.disabled:hover, a.disabled:focus {
 	background:#35537a; color:#ddd; text-shadow:#000 0 -1px 0;
 	-moz-box-shadow:0 0 1px #000,0 1px 1px #6d7d94 inset; -webkit-box-shadow:0 0 1px #000,0 1px 1px #6d7d94 inset; box-shadow:0 0 1px #000,0 1px 1px #6d7d94 inset;
 }
-	.primary:hover, input[type="submit"].primary:hover, input[type="button"].primary:hover, button.primary:hover, .button.primary:hover,
-	.primary:focus, input[type="submit"].primary:focus, input[type="button"].primary:focus, button.primary:focus, .button.primary:focus {
-		border:1px solid #1d2d44;
-		background:#2d3d54; color:#fff; text-shadow:#000 0 -1px 0;
-		-moz-box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset; -webkit-box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset; box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset;
-	}
-	.primary:active, input[type="submit"].primary:active, input[type="button"].primary:active, button.primary:active, .button.primary:active {
-		border:1px solid #1d2d44;
-		background:#1d2d44; color:#bbb; text-shadow:#000 0 -1px 0;
-		-moz-box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset; -webkit-box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset; box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset;
-	}
+.primary:hover, input[type="submit"].primary:hover, input[type="button"].primary:hover, button.primary:hover, .button.primary:hover,
+.primary:focus, input[type="submit"].primary:focus, input[type="button"].primary:focus, button.primary:focus, .button.primary:focus {
+	border:1px solid #1d2d44;
+	background:#2d3d54; color:#fff; text-shadow:#000 0 -1px 0;
+	-moz-box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset; -webkit-box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset; box-shadow:0 0 1px #000,0 1px 1px #5d6d84 inset;
+}
+.primary:active, input[type="submit"].primary:active, input[type="button"].primary:active, button.primary:active, .button.primary:active {
+	border:1px solid #1d2d44;
+	background:#1d2d44; color:#bbb; text-shadow:#000 0 -1px 0;
+	-moz-box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset; -webkit-box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset; box-shadow:0 1px 1px #fff,0 1px 1px 0 rgba(0,0,0,.2) inset;
+}
 
 
 #body-login input { font-size:1.5em; }
@@ -132,7 +142,7 @@ a.disabled, a.disabled:hover, a.disabled:focus {
 #remember_login { margin:.8em .2em 0 1em; vertical-align:text-bottom; }
 .searchbox input[type="search"] { font-size:1.2em; padding:.2em .5em .2em 1.5em; background:#fff url('../img/actions/search.svg') no-repeat .5em center; border:0; -moz-border-radius:1em; -webkit-border-radius:1em; border-radius:1em; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; filter:alpha(opacity=70);opacity:.7; -webkit-transition:opacity 300ms; -moz-transition:opacity 300ms; -o-transition:opacity 300ms; transition:opacity 300ms; margin-top:10px; float:right; }
 input[type="submit"].enabled { background:#66f866; border:1px solid #5e5; -moz-box-shadow:0 1px 1px #f8f8f8, 0 1px 1px #cfc inset; -webkit-box-shadow:0 1px 1px #f8f8f8, 0 1px 1px #cfc inset; box-shadow:0 1px 1px #f8f8f8, 0 1px 1px #cfc inset; }
-#select_all{ margin-top:.4em !important;}
+#select_all{ margin-top:.4em }
 
 /* CONTENT ------------------------------------------------------------------ */
 #controls {
@@ -287,36 +297,36 @@ li.update, li.error { width:640px; margin:4em auto; padding:1em 1em 1em 4em; bac
 	white-space:nowrap; overflow:hidden; text-overflow:ellipsis; /* ellipsize long app names */
 }
 
-	/* icon opacity and hover effect */
-	#navigation a img,
-	#navigation a span {
-		/* 50% opacity when inactive */
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-		filter: alpha(opacity=50);
-		opacity: .5;
-	}
-	#navigation a:hover img, #navigation a:focus img,
-	#navigation a:hover span, #navigation a:focus span {
-		/* 80% opacity when hovered or focused */
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-		filter: alpha(opacity=80);
-		opacity: .8;
-	}
-	#navigation a.active img,
-	#navigation a.active span {
-		 /* full opacity for the active app */
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-		filter: alpha(opacity=100);
-		opacity: 1;
-	}
+/* icon opacity and hover effect */
+#navigation a img,
+#navigation a span {
+	/* 50% opacity when inactive */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	filter: alpha(opacity=50);
+	opacity: .5;
+}
+#navigation a:hover img, #navigation a:focus img,
+#navigation a:hover span, #navigation a:focus span {
+	/* 80% opacity when hovered or focused */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	filter: alpha(opacity=80);
+	opacity: .8;
+}
+#navigation a.active img,
+#navigation a.active span {
+	 /* full opacity for the active app */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity: 1;
+}
 
-	/* positioning */
-	#navigation .icon {
-		display:block;
-		width:32px; height:32px;
-		margin:0 16px 0; padding:8px 0 4px;
-	}
-	#navigation li:first-child a { padding-top:16px; }
+/* positioning */
+#navigation .icon {
+	display:block;
+	width:32px; height:32px;
+	margin:0 16px 0; padding:8px 0 4px;
+}
+#navigation li:first-child a { padding-top:16px; }
 
 
 /* USER MENU */
@@ -331,12 +341,12 @@ li.update, li.error { width:640px; margin:4em auto; padding:1em 1em 1em 4em; bac
 	border-bottom-left-radius:7px; border-bottom:1px #333 solid; border-left:1px #333 solid;
 	-moz-box-shadow:0 0 7px rgb(29,45,68); -webkit-box-shadow:0 0 7px rgb(29,45,68); box-shadow:0 0 7px rgb(29,45,68);
 }
-	#expanddiv a {
-		display:block; color:#fff; text-shadow:0 -1px 0 #000; padding:0 8px;
-		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; filter:alpha(opacity=70);opacity:.7;
-	}
-	#expanddiv a img { margin-bottom:-3px; }
-	#expanddiv a:hover, #expanddiv a:focus, #expanddiv a:active { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); opacity:1; }
+#expanddiv a {
+	display:block; color:#fff; text-shadow:0 -1px 0 #000; padding:0 8px;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; filter:alpha(opacity=70);opacity:.7;
+}
+#expanddiv a img { margin-bottom:-3px; }
+#expanddiv a:hover, #expanddiv a:focus, #expanddiv a:active { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); opacity:1; }
 
 
 /* VARIOUS REUSABLE SELECTORS */
