Improve filelist summary
 - Remove bottom border of summary

 - Increase padding of summary

 - Use text instead of '&'

Fix #993

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -163,6 +163,11 @@ a.action>img { max-height:16px; max-width:16px; vertical-align:text-bottom; }
 	opacity: .5;
 }
 
+.summary td {
+	padding-top: 8px;
+	border-bottom: none;
+}
+
 .summary .info {
 	margin-left: 3em;
 }
