--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -163,8 +163,8 @@ a.action>img { max-height:16px; max-width:16px; vertical-align:text-bottom; }
 	opacity: .5;
 }
 
-.summary:hover {
-	background-color: #fff;
+.summary:hover, .summary {
+	background-color: transparent;
 }
 
 .summary td {
